Refactored file to update the footer section

--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -119,19 +119,19 @@
 
                 <ul class="mt-3 mb-10 text-lg">
 
-                    <li class="mb-0 md:mb-2">User FAQs</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">User FAQs</li>
 
 
-                    <li class="mb-0 md:mb-2">Contact Us</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Contact Us</li>
 
 
-                    <li class="mb-0 md:mb-2">Legal</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Legal</li>
 
 
-                    <li class="mb-0 md:mb-2">Privacy Policy</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Privacy Policy</li>
 
 
-                    <li class="">Terms and Conditions</li>
+                    <li class="cursor-pointer">Terms and Conditions</li>
 
                 </ul>
 
@@ -182,16 +182,16 @@
             </div>
 
             <div class="flex">
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
         </div>
