Refactored file to update the navbar and the footer section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                         </a>
 
-                        <a href="">
+                        <a href="javascript:void(0)">
 
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
                                 fill="currentColor">
@@ -149,13 +149,12 @@
                 </div>
 
                 <div class="p-2 md:p-4 bg-gray-600 text-white border-l-2 border-black">
-                    <a href="">
+                    
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                         </svg>
-                    </a>
 
                 </div>
             </div>
@@ -297,8 +296,9 @@
                     GET YOUR USED PRE-OWNED SAMSUNG <span class="text-xl md:text-1.5xl lg:text-3xl">
                         & have it delivered to you tomorrow<span>
                 </h1>
-                <button class="bg-black text-white py-2 px-3 rounded text-sm ml-40 sm:ml-80 md:ml-40 lg:ml-60">SHOP
-                    NOW</button>
+                <a href="productInventory(Iphone).html"> <button
+                    class="bg-black text-white py-2 px-3 rounded text-sm ml-40 sm:ml-80 md:ml-40 lg:ml-60">SHOP
+                    NOW</button></a>
             </div>
             <div class="w-full">
                 <img src="./assets/img/MultipleSamsungPhone.png" alt="">
@@ -351,19 +351,19 @@
 
                     <ul class="mt-3 mb-10 text-lg">
 
-                        <li class="mb-0 md:mb-2">User FAQs</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">User FAQs</li>
 
 
-                        <li class="mb-0 md:mb-2">Contact Us</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Contact Us</li>
 
 
-                        <li class="mb-0 md:mb-2">Legal</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Legal</li>
 
 
-                        <li class="mb-0 md:mb-2">Privacy Policy</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Privacy Policy</li>
 
 
-                        <li class="">Terms and Conditions</li>
+                        <li class="cursor-pointer">Terms and Conditions</li>
 
                     </ul>
 
@@ -414,18 +414,16 @@
                 </div>
 
                 <div class="flex">
-                    <a href="">
-                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                    <a href="">
-                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2 cursor-pointer">
 
-                    <a href="">
-                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2 cursor-pointer">
 
-                    <a href="">
-                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2 cursor-pointer">
+
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6 cursor-pointer">
                 </div>
+
             </div>
 
         </footer>
