--- a/productInventory(Samsung).html
+++ b/productInventory(Samsung).html
@@ -159,7 +159,7 @@
 
             <div class="p-2 md:p-4 bg-search text-white border-l-2 border-black">
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -529,19 +529,19 @@
 
                     <ul class="mt-3 mb-10 text-lg">
 
-                        <li class="mb-0 md:mb-2">User FAQs</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">User FAQs</li>
 
 
-                        <li class="mb-0 md:mb-2">Contact Us</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Contact Us</li>
 
 
-                        <li class="mb-0 md:mb-2">Legal</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Legal</li>
 
 
-                        <li class="mb-0 md:mb-2">Privacy Policy</li>
+                        <li class="mb-0 md:mb-2 cursor-pointer">Privacy Policy</li>
 
 
-                        <li class="">Terms and Conditions</li>
+                        <li class="cursor-pointer">Terms and Conditions</li>
 
                     </ul>
 
@@ -592,16 +592,16 @@
                 </div>
 
                 <div class="flex">
-                    <a href="">
+                    <a href="javascript:void(0)">
                         <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                    <a href="">
+                    <a href="javascript:void(0)">
                         <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
-                    <a href="">
+                    <a href="javascript:void(0)">
                         <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                    <a href="">
+                    <a href="javascript:void(0)">
                         <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
             </div>
