--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
 
                         </a>
 
-                        <a href="">
+                        <a href="javascript:void(0)">
 
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
                                 fill="currentColor">
@@ -253,19 +253,19 @@
 
                 <ul class="mt-3 mb-10 text-lg">
 
-                    <li class="mb-0 md:mb-2">User FAQs</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">User FAQs</li>
 
 
-                    <li class="mb-0 md:mb-2">Contact Us</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Contact Us</li>
 
 
-                    <li class="mb-0 md:mb-2">Legal</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Legal</li>
 
 
-                    <li class="mb-0 md:mb-2">Privacy Policy</li>
+                    <li class="mb-0 md:mb-2 cursor-pointer">Privacy Policy</li>
 
 
-                    <li class="">Terms and Conditions</li>
+                    <li class="cursor-pointer">Terms and Conditions</li>
 
                 </ul>
 
@@ -316,16 +316,16 @@
             </div>
 
             <div class="flex">
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
-                <a href="">
+                <a href="javascript:void(0)">
                     <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
         </div>
@@ -333,7 +333,7 @@
     </footer>
     <!-- footer end -->
 
-    
+
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
 
 </body>
